chore: swagger doc add tags schema and version
