# src/infra/web/routes/habit.routes.ts
@@ -6,43 +6,45 @@ const habitRouter = express.Router();
 const postgresHabitRepository = new PostgresHabitRepository();
 const habitController = new HabitController(postgresHabitRepository);
 
-habitRouter.get('/', habitController.index);
+habitRouter.get(
+  '/',
+  // #swagger.tags = ['Habits']
+  habitController.index,
+);
 habitRouter.get(
   '/:id',
+  // #swagger.tags = ['Habits']
   //  #swagger.parameters['id'] = { description: 'habit id' }
   habitController.show,
 );
 habitRouter.post(
   '/',
+  // #swagger.tags = ['Habits']
   /*  #swagger.parameters['obj'] = {
         in: 'body',
         description: 'create a habit',
-        schema: {
-            $name: 'new habit name',
-        }
+        schema: { $ref: '#/definitions/HabitBodyName' }
   } */
   habitController.create,
 );
 habitRouter.put(
   '/',
+  // #swagger.tags = ['Habits']
   //  #swagger.parameters['id'] = { description: 'habit id' }
   /*  #swagger.parameters['obj'] = {
         in: 'body',
         description: 'update a habit',
-        schema: {
-            $name: 'update habit name',
-        }
+        schema: { $ref: '#/definitions/HabitBodyName' }
   } */
   habitController.update,
 );
 habitRouter.delete(
   '/',
+  // #swagger.tags = ['Habits']
   /*  #swagger.parameters['obj'] = {
         in: 'body',
         description: 'habit uuid',
-        schema: {
-            $id: 'new habit name',
-        }
+        schema: { $ref: '#/definitions/HabitBodyId' }
   } */
   habitController.destroy,
 );
